--- a/indexDummy.html
+++ b/indexDummy.html
@@ -17,41 +17,31 @@
     </div>
     </div>
     <div id="centerImg"></div>
-    <nav>
-      {{#if logged_out}}
-      <a href="#">Sign Up</a>
-      {{else}}
-      <a href="">Log Out</a>
-      {{/if}}
-    </nav>
+    <div>
+      <nav>
+        {{#if logged_in}}
+        <button class="no-button" id="logout">logout</button>
+        {{else}}
+        <a href="/signup">Sign Up</a>
+        {{/if}}
+      </nav>
+    </div>
   </header>
 
-    <main class="wkOutMain">
-    {{#each routines as |routine| }}
-    <section class="wkoutSect">
-      <a href="#">
-      <div class="wkoutRout">
-        <div class="routinenName">
-          <h2 id="routName">{{routine.routineName}}</h2>
-        </div>
-        <div id="routDesc" style="display: none;" >
-            <p>DESCRIPTION OF WORKOUT</p>
-        </div>
+  <section class="wkOutHistSect">
+    <div id="wkOutHistContainer">
+      <div id="routTitle">
+        <h3>Routine</h3>
       </div>
-      </a>
-    </section>
-  {{/each}}
-    <section class="wkHistSect">
-      <a href="#">
-      <div class="navWkHist">
-        <div class="routinenName">
-          <h2>Workout History</h2>
-        </div>
+      <div id="exercList" style="display: none">
+        <p>exercise1<br>exeercise2<br>exercise3</p>
       </div>
-      </a>
-    </section>
-</main>
-
+      <div id="exercDate">
+        <h3>8/18/2023</h3>
+      </div>
+    </div>
+  </section>
+  
 </body>
   <script src="./public/js/index.js"></script>
 </html>
