--- a/indexDummy.html
+++ b/indexDummy.html
@@ -33,7 +33,7 @@
       <div id="routTitle">
         <h3>Routine</h3>
       </div>
-      <div id="exercList" style="display: none">
+      <div id="exercList">
         <p>exercise1<br>exeercise2<br>exercise3</p>
       </div>
       <div id="exercDate">
@@ -43,5 +43,5 @@
   </section>
   
 </body>
-  <script src="./public/js/index.js"></script>
+  <script src="./public/js/index.js" type="text/javascript"></script>
 </html>
