--- a/indexDummy.html
+++ b/indexDummy.html
@@ -17,7 +17,7 @@
     </div>
     </div>
     <div id="centerImg"></div>
-    <div>
+    <div id="logSignEl">
       <nav>
         {{#if logged_in}}
         <button class="no-button" id="logout">logout</button>
@@ -30,18 +30,16 @@
 
   <section class="wkOutHistSect">
     <div id="wkOutHistContainer">
-      <div id="routTitle">
-        <h3>Routine</h3>
-      </div>
-      <div id="exercList">
-        <p>exercise1<br>exeercise2<br>exercise3</p>
-      </div>
       <div id="exercDate">
         <h3>8/18/2023</h3>
       </div>
+      <div id="exercList">
+        <h3>Routine</h3>
+        <p>exercise1<br>exercise2<br>exercise3</p>
+      </div>
     </div>
   </section>
-  
+
 </body>
   <script src="./public/js/index.js" type="text/javascript"></script>
 </html>
